fixed header z-index

--- a/src/client/src/components/common/core/header/header.module.scss
+++ b/src/client/src/components/common/core/header/header.module.scss
@@ -10,4 +10,5 @@
   position: sticky;
   top: 0;
   right: 0;
+  z-index: 2;
 }
